# ObfusEval

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  properties.json
dataset/: README.md  make_testcase.py  measure_code_loc.py  measure_test_coverage.py
dataset/basic-algorithms/: README.md  changes.md  code_loc.json  test_coverage.json
dataset/basic-algorithms/src/: anagram.c  armstrong.c  binaryadd.c  binarymult.c  binarysearch.c  binarysearchrec.c  bubblesort.c  comparestrings.c  concatstrings.c  decimaltobinary.c  decimaltohex.c  decimaltooctal.c  factorial.c  factorialrec.c  fib.c  floyd.c  frequency.c  gcd.c  gcdrec.c  insertionsort.c  iofile.c  lcm.c  linearsearch.c  mergesort.c  minmaxarray.c  multtable.c  numtowords.c  palindrome.c  perfect.c  prime.c  printinitials.c  pyramid.c  quicksort.c  random.c  reverse.c  (+5 more)
docker/: README.md
docker/ollvm/: Dockerfile
docker/tigress/: Dockerfile
obfuscator/: README.md  obfuscator-llvm.json  tigress.json
output/: .gitignore  Report.ipynb  Report_Imach.ipynb
output/basic-algorithms-ollvm/: result.json
output/basic-algorithms-tigress/: result.json
output/prop1/: result.json
output/prop2/: result.json
src/: builder.rs  evaluate.rs  lib.rs  main.rs  program.rs  record.rs  setup.rs
src/builder/: obfuscator.rs  service.rs
src/evaluate/: code_distance_mean.rs  test_pass_rate.rs
src/program/: code.rs  dataset.rs  testcase.rs
src/record/: code_distance.rs  code_test.rs  transformation_unit.rs
src/setup/: compile_code.rs  obfuscate_code.rs
tests/sample-output/: original-opcode.txt
(+265 files in other folders)
