[package]
name = "obfuseval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
console = "0.15.2"
duct = "0.13.5"
indicatif = { version = "0.17.1", features = ["rayon"] }
nom = "7.1.1"
quanta = "0.10.1"
rayon = "1.5.3"
rs_algo = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
users = "0.11.0"
